# daedelus

./: README.md
3D_printed_anchor/: anchor.stl
3D_printed_hull/: hull.stl
3D_printed_shoulder/: shoulder.stl
avionics/: .gitignore  Cargo.toml
avionics/.cargo/: config.toml
avionics/src/: esc.rs  lib.rs  main.rs  pid.rs  servo.rs  sim7000g.rs
avionics/ui/: main.html  main.ts
scad/: Makefile
scad/src/: anchor.scad  chin.scad  drone.scad  forehead.scad  front.scad  heave.scad  hull.scad  jaw.scad  left-hand.scad  left-hip.scad  left-shoulder.scad  loft.scad  nose.scad  rear-anchor.scad  rear-heave.scad  rear-hull.scad  rear-left-hand.scad  rear-left-hip.scad  rear-left-shoulder.scad  rear-loft.scad  rear-right-hand.scad  rear-right-hip.scad  rear-right-shoulder.scad  rear.scad  right-hand.scad  right-hip.scad  right-shoulder.scad  tail-bottom.scad  tail-top.scad  tail.scad
scad/src/lib/: naca4.scad  vertex.scad
