[package]
name = "avionics"
version = "0.1.0"
authors = ["Evan Rusmisel <evanrusmisel@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
# When the system is ready to attach an actual IMU, this line allows for the IMU
# to be enabled.
imu = ["dep:mpu9250"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
# When system is ready to attach actual IMU, this line allows for IMU to be
# enabled.
mpu9250 = { version = "0.25.0", features = ["i2c"], optional = true }
anyhow = "1.0.79"

[build-dependencies]
embuild = "0.31.3"
